--- a/app/views/sleep_reports/_form.html.erb
+++ b/app/views/sleep_reports/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= form.label :asleep_at %>
-    <%= form.datetime_select :asleep_at %>
+    <%= form.datetime_select :asleep_at, ampm: true %>
   </div>
 
   <div class="field">
     <%= form.label :wakeup_at %>
-    <%= form.datetime_select :wakeup_at %>
+    <%= form.datetime_select :wakeup_at, ampm: true, include_blank: sleep_report.asleep_at.nil? %>
   </div>
 
   <div class="actions">
