--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Asleep at</th>
       <th>Wakeup at</th>
+      <th>Duration</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= sleep_report.asleep_at %></td>
         <td><%= sleep_report.wakeup_at %></td>
+        <td><%= Time.at(sleep_report.duration).utc.strftime("%H:%M") if sleep_report.complete? %></td>
         <td><%= link_to 'Show', sleep_report %></td>
         <td><%= link_to 'Edit', edit_sleep_report_path(sleep_report) %></td>
         <td><%= link_to 'Destroy', sleep_report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
