--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -2,22 +2,28 @@
 
 <h1>Sleep Reports</h1>
 
+<%= link_to 'New Sleep Report', new_sleep_report_path %>
+
+<br><br>
+
 <table>
   <thead>
     <tr>
-      <th>Asleep at</th>
-      <th>Wakeup at</th>
+      <th>Date</th>
+      <th>Asleep</th>
+      <th>Wakeup</th>
       <th>Duration</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @sleep_reports.each do |sleep_report| %>
+    <% @sleep_reports.reverse.each do |sleep_report| %>
       <tr>
-        <td><%= sleep_report.asleep_at %></td>
-        <td><%= sleep_report.wakeup_at %></td>
-        <td><%= Time.at(sleep_report.duration).utc.strftime("%H:%M") if sleep_report.complete? %></td>
+        <td><%= sleep_report.asleep_at.strftime('%Y-%m-%d') %></td>
+        <td><%= sleep_report.asleep_at.strftime('%I:%M %p') %></td>
+        <td><%= sleep_report.wakeup_at&.strftime('%I:%M %p') %></td>
+        <td><%= Time.at(sleep_report.duration).utc.strftime('%H:%M') if sleep_report.complete? %></td>
         <td><%= link_to 'Show', sleep_report %></td>
         <td><%= link_to 'Edit', edit_sleep_report_path(sleep_report) %></td>
         <td><%= link_to 'Destroy', sleep_report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -25,7 +31,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Sleep Report', new_sleep_report_path %>
