Allow decimal in weight pounds field

--- a/app/views/weight_reports/_form.html.erb
+++ b/app/views/weight_reports/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :pounds %>
-    <%= form.number_field :pounds %>
+    <%= form.number_field :pounds, step: :any %>
   </div>
 
   <div class="actions">
