--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
 <h1><i>Self</i>-Metrics</h1>
 <%= link_to 'Sleep', sleep_reports_path %> |
-<%= link_to 'Weight', weight_reports_path %>
+<%= link_to 'Weight', weight_reports_path %> |
+<%= link_to 'Cardio', cardio_reports_path %>
 <hr><br>
