--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -18,7 +18,7 @@
   </thead>
 
   <tbody>
-    <% @sleep_reports.reverse.each do |sleep_report| %>
+    <% @sleep_reports.order(asleep_at: :desc).each do |sleep_report| %>
       <tr>
         <td><%= sleep_report.asleep_at.strftime('%Y-%m-%d') %></td>
         <td><%= sleep_report.asleep_at.strftime('%I:%M %p') %></td>
