--- a/app/views/cardio_reports/show.html.erb
+++ b/app/views/cardio_reports/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Timestamp:</strong>
-  <%= @cardio_report.timestamp %>
+  <strong>Finished at:</strong>
+  <%= @cardio_report.finished_at %>
 </p>
 
 <p>
