--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :timestamp %>
-    <%= form.datetime_select :timestamp %>
+    <%= form.label :finished_at %>
+    <%= form.datetime_select :finished_at %>
   </div>
 
   <div class="field">
