Rename cardio seconds column to duration

--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :seconds %>
-    <%= form.number_field :seconds %>
+    <%= form.label :duration %>
+    <%= form.number_field :duration %>
   </div>
 
   <div class="field">
