--- a/app/views/cardio_reports/show.html.erb
+++ b/app/views/cardio_reports/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Seconds:</strong>
-  <%= @cardio_report.seconds %>
+  <strong>Duration:</strong>
+  <%= @cardio_report.duration %>
 </p>
 
 <p>
