Refactor column names

--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -17,13 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :duration %>
-    <%= form.number_field :duration %>
+    <%= form.label :duaration_seconds %>
+    <%= form.number_field :duaration_seconds %>
   </div>
 
   <div class="field">
-    <%= form.label :miles %>
-    <%= form.number_field :miles, step: :any %>
+    <%= form.label :distance_miles %>
+    <%= form.number_field :distance_miles, step: :any %>
   </div>
 
   <div class="field">
