--- a/app/views/cardio_reports/show.html.erb
+++ b/app/views/cardio_reports/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <strong>Duration:</strong>
-  <%= @cardio_report.duration %>
+  <%= @cardio_report.duaration_seconds %>
 </p>
 
 <p>
   <strong>Miles:</strong>
-  <%= @cardio_report.miles %>
+  <%= @cardio_report.distance_miles %>
 </p>
 
 <p>
