--- a/app/views/weight_reports/_form.html.erb
+++ b/app/views/weight_reports/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :pounds %>
-    <%= form.number_field :pounds, step: :any %>
+    <%= form.label :weight_pounds %>
+    <%= form.number_field :weight_pounds, step: :any %>
   </div>
 
   <div class="actions">
