--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -19,7 +19,7 @@
     <% @weight_reports.order(timestamp: :desc).each do |weight_report| %>
       <tr>
         <td><%= weight_report.timestamp.strftime('%Y-%m-%d') %></td>
-        <td><%= weight_report.pounds %></td>
+        <td><%= weight_report.weight_pounds %></td>
         <td><%= link_to 'Show', weight_report %></td>
         <td><%= link_to 'Edit', edit_weight_report_path(weight_report) %></td>
         <td><%= link_to 'Destroy', weight_report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
