--- a/app/views/weight_reports/show.html.erb
+++ b/app/views/weight_reports/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Pounds:</strong>
-  <%= @weight_report.pounds %>
+  <%= @weight_report.weight_pounds %>
 </p>
 
 <%= link_to 'Edit', edit_weight_report_path(@weight_report) %> |
