--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -22,8 +22,8 @@
     <% @cardio_reports.order(finished_at: :desc).each do |cardio_report| %>
       <tr>
         <td><%= cardio_report.finished_at.strftime('%Y-%m-%d') %></td>
-        <td><%= Time.at(cardio_report.duration).utc.strftime('%H:%M:%S') %></td>
-        <td><%= cardio_report.miles %></td>
+        <td><%= Time.at(cardio_report.duaration_seconds).utc.strftime('%H:%M:%S') %></td>
+        <td><%= cardio_report.distance_miles %></td>
         <td><%= cardio_report.cardio_type %></td>
         <td><%= cardio_report.machine %></td>
         <td><%= link_to 'Show', cardio_report %></td>
