Use am/pm for cardio datetime select

--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :finished_at %>
-    <%= form.datetime_select :finished_at %>
+    <%= form.datetime_select :finished_at, ampm: true %>
   </div>
 
   <div class="field">
