--- a/app/views/cardio_reports/show.html.erb
+++ b/app/views/cardio_reports/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Duration:</strong>
-  <%= @cardio_report.duaration_seconds %>
+  <%= @cardio_report.duration_time.strftime('%H:%M:%S') %>
 </p>
 
 <p>
