--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -1,42 +1,20 @@
 <%= bootstrap_form_with(model: cardio_report, local: true) do |form| %>
-  <% if cardio_report.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(cardio_report.errors.count, "error") %> prohibited this cardio_report from being saved:</h2>
+  <%= form.datetime_select :finished_at, ampm: true %>
 
-      <ul>
-      <% cardio_report.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.datetime_select :finished_at, ampm: true %>
-  </div>
-
-  <div class="field">
-    <%= form.label :duration %>
-    <div class="row">
-      <%= form.select :part_hours, options_for_select(0..10, cardio_report.duration_time.hour), hide_label: true, append: "h" %>
-      <%= form.select :part_minutes, options_for_select(0..59, cardio_report.duration_time.min), hide_label: true, append: "m" %>
-      <%= form.select :part_seconds, options_for_select(0..59, cardio_report.duration_time.sec), hide_label: true, append: "s" %>
-    </div>
+  <%= form.label :duration %>
+  <div class="input-group">
+    <%= form.select :part_hours, options_for_select(0..10, cardio_report.duration_time.hour), hide_label: true, append: "h" %>
+    <%= form.select :part_minutes, options_for_select(0..59, cardio_report.duration_time.min), hide_label: true, append: "m" %>
+    <%= form.select :part_seconds, options_for_select(0..59, cardio_report.duration_time.sec), hide_label: true, append: "s" %>
   </div>
   
-  <div class="field">
-    <%= form.number_field :distance_miles, label: "Distance", step: :any %>
-  </div>
+  <%= form.number_field :distance_miles, label: "Distance", step: :any, append: "miles" %>
 
-  <div class="field">
-    <%= form.select :cardio_type, CardioReport.cardio_types.keys, label: "Type" %>
-  </div>
+  <%= form.select :cardio_type, CardioReport.cardio_types.keys, label: "Type" %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.check_box :machine, label: "Machine?" %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  
+  <%= form.submit class: "btn btn-primary" %>
 <% end %>
