--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Cardio Reports</h1>
 
-<%= link_to 'New Cardio Report', new_cardio_report_path %>
+<%= link_to 'New Cardio Report', new_cardio_report_path, class: "btn btn-primary" %>
 
 <br><br>
 
