--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Sleep Reports</h1>
 
-<%= link_to 'New Sleep Report', new_sleep_report_path %>
+<%= link_to 'New Sleep Report', new_sleep_report_path, class: "btn btn-primary" %>
 
 <br><br>
 
