--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Weight Reports</h1>
 
-<%= link_to 'New Weight Report', new_weight_report_path %>
+<%= link_to 'New Weight Report', new_weight_report_path, class: "btn btn-primary" %>
 
 <br><br>
 
