--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,8 @@
-<h1><b><i>Self</i>-Metrics</b></h1>
-<%= link_to 'Sleep', sleep_reports_path %> |
-<%= link_to 'Weight', weight_reports_path %> |
-<%= link_to 'Cardio', cardio_reports_path %>
-<hr>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand"><i>Self</i>-Metrics</a>
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" href=<%= sleep_reports_path %>>Sleep</a>
+    <a class="nav-item nav-link" href=<%= weight_reports_path %>>Weight</a>
+    <a class="nav-item nav-link" href=<%= cardio_reports_path %>>Cardio</a>
+  </div>
+</nav>
