--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand"><i>Self</i>-Metrics</a>
+  <a class="navbar-brand" href="/"><i>Self</i>-Metrics</a>
   <div class="navbar-nav">
     <a class="nav-item nav-link" href=<%= sleep_reports_path %>>Sleep</a>
     <a class="nav-item nav-link" href=<%= weight_reports_path %>>Weight</a>
     <a class="nav-item nav-link" href=<%= cardio_reports_path %>>Cardio</a>
   </div>
 </nav>
+<br>
