--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Nate Baer</h1>
 
-<p>Self-metrics summary report<p>
+<p><i>Self-metrics summary report:</i><p>
+
+<h2>Current weight is <b><%= WeightReport.current_weight %></b> pounds</h2>
