Redirect url root to summary

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/"><i>Self</i>-Metrics</a>
+  <a class="navbar-brand" href=<%= summary_index_path %>><i>Self</i>-Metrics</a>
   <div class="navbar-nav">
     <a class="nav-item nav-link" href=<%= sleep_reports_path %>>Sleep</a>
     <a class="nav-item nav-link" href=<%= weight_reports_path %>>Weight</a>
