--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href=<%= summary_index_path %>><i>Self</i>-Metrics</a>
-  <div class="navbar-nav">
-    <a class="nav-item nav-link" href=<%= sleep_reports_path %>>Sleep</a>
-    <a class="nav-item nav-link" href=<%= weight_reports_path %>>Weight</a>
-    <a class="nav-item nav-link" href=<%= cardio_reports_path %>>Cardio</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <a class="navbar-brand" href=<%= summary_index_path %>><b><i>Self</i>-Metrics</b></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-item nav-link" href=<%= sleep_reports_path %>>Sleep</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-item nav-link" href=<%= weight_reports_path %>>Weight</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-item nav-link" href=<%= cardio_reports_path %>>Cardio</a>
+      </li>
+    </ul>
+    <a class="btn btn-outline-light" href="/logout">Logout</a>
   </div>
 </nav>
 <br>
