--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
+    <% if session[:authenticated] %>
+      <%= render "layouts/header" %>
+    <% end %>
     <div class="container">
       <%= yield %>
     </div>
