Improve summary page

--- a/app/views/summary/index.html.erb
+++ b/app/views/summary/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Nate Baer</h1>
+<h1>Summary Report</h1>
+<br>
 
-<p><i>Self-metrics summary report:</i><p>
-
-<h2>Current weight is <b><%= WeightReport.current_weight %></b> pounds</h2>
+<h2>Weight is <b><%= WeightReport.current_weight_pounds %></b> pounds</h2>
