--- a/app/views/weight_reports/show.html.erb
+++ b/app/views/weight_reports/show.html.erb
@@ -1,6 +1,6 @@
 <p>
-  <strong>Timestamp:</strong>
-  <%= @weight_report.timestamp %>
+  <strong>Datestamp:</strong>
+  <%= @weight_report.datestamp %>
 </p>
 
 <p>
