--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @weight_reports.ordered_by_recency.reverse.each do |weight_report| %>
       <tr>
-        <td><%= weight_report.timestamp.strftime('%Y-%m-%d') %></td>
+        <td><%= weight_report.datestamp.strftime('%Y-%m-%d') %></td>
         <td><%= weight_report.weight_pounds %></td>
         <td><%= link_to 'Edit', edit_weight_report_path(weight_report), class: "btn btn-outline-secondary btn-sm" %></td>
         <td><%= link_to 'Destroy', weight_report, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-secondary btn-sm" %></td>
