--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,7 @@
     <%= render "layouts/header" %>
 
     <div class="container">
-      <% flash.each do |key, value| %>
-        <div class="<%= flash_class(key) %>">
-          <%= value %>
-        </div>
-      <% end %>
+      <%= render "layouts/flash" %>
 
       <%= yield %>
     </div>
