Improve nav button styling

--- a/app/views/cardio_reports/edit.html.erb
+++ b/app/views/cardio_reports/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form', cardio_report: @cardio_report %>
 
-<%= link_to 'Show', @cardio_report %> |
-<%= link_to 'Back', cardio_reports_path %>
+<br>
+<%= link_to 'Back', cardio_reports_path, class: "btn btn-outline-primary" %>&nbsp;           
+<%= link_to 'Show', @cardio_report, class: "btn btn-outline-secondary" %>
