--- a/app/views/weight_reports/new.html.erb
+++ b/app/views/weight_reports/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', weight_report: @weight_report %>
 
-<%= link_to 'Back', weight_reports_path %>
+<br>
+<%= link_to 'Back', weight_reports_path, class: "btn btn-outline-primary" %>
