--- a/app/views/cardio_reports/new.html.erb
+++ b/app/views/cardio_reports/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', cardio_report: @cardio_report %>
 
-<%= link_to 'Back', cardio_reports_path %>
+<br>
+<%= link_to 'Back', cardio_reports_path, class: "btn btn-outline-primary" %>
