--- a/app/views/sleep_reports/new.html.erb
+++ b/app/views/sleep_reports/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', sleep_report: @sleep_report %>
 
-<%= link_to 'Back', sleep_reports_path %>
+<br>
+<%= link_to 'Back', sleep_reports_path, class: "btn btn-outline-primary" %>
