--- a/app/views/weight_reports/edit.html.erb
+++ b/app/views/weight_reports/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form', weight_report: @weight_report %>
 
-<%= link_to 'Show', @weight_report %> |
-<%= link_to 'Back', weight_reports_path %>
+<br>
+<%= link_to 'Back', weight_reports_path, class: "btn btn-outline-primary" %>&nbsp;
+<%= link_to 'Show', @weight_report, class: "btn btn-outline-secondary" %>
+
