Show banner in non-prod environments

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render "layouts/banner" unless Rails.env == "production" %>
     <%= render "layouts/header" %>
 
     <div class="container">
