Change cardio_reports finished_at column to datestamp

--- a/app/views/cardio_reports/_form.html.erb
+++ b/app/views/cardio_reports/_form.html.erb
@@ -1,5 +1,5 @@
 <%= bootstrap_form_with(model: cardio_report, local: true) do |form| %>
-  <%= form.datetime_select :finished_at, ampm: true %>
+  <%= form.date_select :datestamp, label: "Date" %>
 
   <%= form.label :duration %>
   <div class="input-group">
