--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -18,7 +18,7 @@
   <tbody>
     <% @cardio_reports.ordered_by_recency.reverse.each do |cardio_report| %>
       <tr>
-        <td><%= cardio_report.finished_at.strftime('%Y-%m-%d') %></td>
+        <td><%= cardio_report.datestamp.strftime('%Y-%m-%d') %></td>
         <td><%= cardio_report.duration_time.strftime('%H:%M:%S') %></td>
         <td><%= cardio_report.distance_miles %></td>
         <td><%= cardio_report.cardio_type %></td>
