--- a/app/views/weight_reports/_form.html.erb
+++ b/app/views/weight_reports/_form.html.erb
@@ -1,5 +1,5 @@
 <%= bootstrap_form_with(model: weight_report, local: true) do |form| %>
-  <%= form.date_select :datestamp, ampm: true %>
+  <%= form.date_select :datestamp, label: "Date" %>
   <%= form.number_field :weight_pounds, step: :any %>
   <%= form.submit class: "btn btn-primary" %>
 <% end %>
