Restyle navigation buttons

--- a/app/views/cardio_reports/edit.html.erb
+++ b/app/views/cardio_reports/edit.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form', cardio_report: @cardio_report %>
 
 <br>
-<%= link_to 'Back', cardio_reports_path, class: "btn btn-outline-primary" %>&nbsp;           
+<%= link_to 'Back', cardio_reports_path, class: "btn btn-outline-secondary" %>&nbsp;           
 <%= link_to 'Show', @cardio_report, class: "btn btn-outline-secondary" %>
