--- a/app/views/weight_reports/edit.html.erb
+++ b/app/views/weight_reports/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render 'form', weight_report: @weight_report %>
 
 <br>
-<%= link_to 'Back', weight_reports_path, class: "btn btn-outline-primary" %>&nbsp;
+<%= link_to 'Back', weight_reports_path, class: "btn btn-outline-secondary" %>&nbsp;
 <%= link_to 'Show', @weight_report, class: "btn btn-outline-secondary" %>
 
