--- a/app/views/sleep_reports/edit.html.erb
+++ b/app/views/sleep_reports/edit.html.erb
@@ -3,5 +3,5 @@
 <%= render 'form', sleep_report: @sleep_report %>
 
 <br>
-<%= link_to 'Back', sleep_reports_path, class: "btn btn-outline-primary" %>&nbsp;
+<%= link_to 'Back', sleep_reports_path, class: "btn btn-outline-secondary" %>&nbsp;
 <%= link_to 'Show', @sleep_report, class: "btn btn-outline-secondary" %>
