--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -18,8 +18,10 @@
       <tr>
         <td><%= weight_report.datestamp.strftime('%Y-%m-%d') %></td>
         <td><%= weight_report.weight_pounds %></td>
-        <td><%= link_to 'Edit', edit_weight_report_path(weight_report), class: "btn btn-outline-secondary btn-sm" %></td>
-        <td><%= link_to 'Destroy', weight_report, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-secondary btn-sm" %></td>
+        <td>
+          <%= link_to 'Edit', edit_weight_report_path(weight_report) %> | 
+          <%= link_to 'Destroy', weight_report, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
