Rename machine from cardio reports to treadmill

--- a/app/views/cardio_reports/show.html.erb
+++ b/app/views/cardio_reports/show.html.erb
@@ -14,8 +14,8 @@
 </p>
 
 <p>
-  <strong>Machine:</strong>
-  <%= @cardio_report.machine %>
+  <strong>Treadmill?:</strong>
+  <%= @cardio_report.treadmill %>
 </p>
 
 <%= link_to 'Edit', edit_cardio_report_path(@cardio_report) %> |
