--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -19,8 +19,8 @@
     <% @cardio_reports.ordered_by_recency.reverse.each do |cardio_report| %>
       <tr>
         <td><%= cardio_report.datestamp.strftime('%Y-%m-%d') %></td>
-        <td><%= cardio_report.duration_time.strftime('%H:%M:%S') %></td>
-        <td><%= '%.2f' % cardio_report.distance_miles %></td>
+        <td><%= cardio_report.duration_time.strftime('%M:%S') %></td>
+        <td><%= '%.1f' % cardio_report.distance_miles %></td>
         <td>
           <%= link_to 'Edit', edit_cardio_report_path(cardio_report) %> | 
           <%= link_to 'Show', cardio_report_path(cardio_report) %> | 
