--- a/app/views/cardio_reports/show.html.erb
+++ b/app/views/cardio_reports/show.html.erb
@@ -1,20 +1,16 @@
 <h1>Cardio Summary</h1>
 <br>
 
-<h4>On <b><%= @cardio_report.datestamp %></b></h4>
+<h4>On <b><%= @cardio_report.datestamp.to_formatted_s(:long) %></b></h4>
 <br>
 
-<h4>You ran <b><%= '%.2f' % @cardio_report.distance_miles %> miles</b></h4>
+<h4>You ran <b><%= '%g' % @cardio_report.distance_miles %></b> miles</h4>
 <br>
 
-<h4>in <b><%= @cardio_report.duration_time.strftime('%M:%S') %></b></h4>
-<br>
-
-<% if @cardio_report.treadmill %>
-  <h4> On a <b>treadmill</b></h4>
-<% else %>
-  <h4>In the <b>outdoors</b></h4>
-<% end %>
+<h4>
+  In <b><%= @cardio_report.duration_minutes_part %></b> minutes
+     <b><%= @cardio_report.duration_seconds_part %></b> seconds
+</h4>
 <br>
 
 <%= link_to 'Back', cardio_reports_path, class: "btn btn-outline-secondary" %>&nbsp;
