--- a/app/views/summary/index.html.erb
+++ b/app/views/summary/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Summary Report</h1>
 <br>
 
-<h2>Weight is <b><%= WeightReport.current_weight_pounds %></b> pounds</h2>
+<h2>30 day trailing weight <b><%= '%.1f' % WeightReport.current_average_weight(days=30) %></b> pounds</h2>
