--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,6 +1,6 @@
-<% flash.each do |key, value| %>
-<div class="<%= flash_class(key) %>">
-  <%= value %>
-</div>
+<% flash.each do |key, list| %>
+  <% list.each do |value| %>
+    <div class="<%= flash_class(key) %>"><%= value %></div>
+  <% end %>
 <% end %>
 <% flash.clear %>
