--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,6 +1,10 @@
-<% flash.clear %>
-<% flash.each do |key, list| %>
-  <% list.each do |value| %>
-    <div class="<%= flash_class(key) %>"><%= value %></div>
+<% flash.each do |key, messages| %>
+  <% if messages.instance_of? String %>
+    <div class="<%= flash_class(key) %>"><%= messages %></div>
+  <% elsif messages.instance_of? Array %>
+    <% messages.each do |value| %>
+      <div class="<%= flash_class(key) %>"><%= value %></div>
+    <% end %>
   <% end %>
 <% end %>
+<% flash.clear %>
