--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -2,9 +2,9 @@
 
 <%= link_to 'New Sleep Report', new_sleep_report_path, class: "btn btn-primary" %>&nbsp;
 <% if @sleep_reports.latest.complete? %>
-  <%= link_to 'Start Sleep', sleep_reports_path(sleep_report: { asleep_at: Time.now }), method: :post, class: "btn btn-success" %>
+  <%= link_to 'Start Sleep', sleep_start_url, method: :post, class: "btn btn-success" %>
 <% else %>
-  <%# link_to 'Stop Sleep', new_sleep_report_path, class: "btn btn-danger" %>
+  <%= link_to 'Stop Sleep', sleep_stop_url, method: :patch, class: "btn btn-danger" %>
 <% end %>
 
 <br><br>
