--- a/app/views/sleep_reports/_form.html.erb
+++ b/app/views/sleep_reports/_form.html.erb
@@ -1,5 +1,5 @@
 <%= bootstrap_form_with(model: sleep_report, local: true) do |form| %>
-  <%= form.datetime_select :asleep_at, ampm: true %>
-  <%= form.datetime_select :wakeup_at, ampm: true, include_blank: sleep_report.asleep_at.nil? %>
+  <%= form.datetime_select :asleep_at, ampm: true, include_blank: true %>
+  <%= form.datetime_select :wakeup_at, ampm: true, include_blank: true %>
   <%= form.submit class: "btn btn-primary" %>
 <% end %>
