--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -4,32 +4,34 @@
 
 <br><br>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Duration</th>
-      <th>Miles</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @cardio_reports.ordered_by_recency.reverse.each do |cardio_report| %>
+<% @cardio_reports.ordered_by_recency.reverse.each do |cardio_report| %>
+  <div class="card">
+    <div class="card-header">
+      <%= cardio_report.datestamp.strftime('%Y-%m-%d') %>
+      <div style="float:right;">
+        <%= link_to edit_cardio_report_path(cardio_report) do %>
+          <%= octicon "pencil", :height => 16 %>
+        <% end %>
+        &nbsp;|&nbsp;
+        <%= link_to cardio_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <%= octicon "trashcan", :height => 16 %>
+        <% end %>
+      </div>
+    </div>
+    <table class="table" style="margin-bottom: 0">
       <tr>
-        <td><%= cardio_report.datestamp.strftime('%Y-%m-%d') %></td>
-        <td><%= cardio_report.duration_time.strftime('%M:%S') %></td>
-        <td><%= '%.1f' % cardio_report.distance_miles %></td>
-        <td nowrap>
-          <%= link_to edit_cardio_report_path(cardio_report) do %>
-            <%= octicon "pencil", :height => 16 %>
-          <% end %>
-          &nbsp;|&nbsp;
-          <%= link_to cardio_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
-            <%= octicon "trashcan", :height => 16 %>
-          <% end %>
-        </td>
+        <td>Duration</td>
+        <td><b><%= cardio_report.duration_time.strftime('%M:%S') %></b></td>
+        <td>Speed</td>
+        <td><b><%= '%.1f' % cardio_report.speed %></b> mph</td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tr>
+        <td>Distance</td>
+        <td><b><%= '%.1f' % cardio_report.distance_miles %></b> miles</td>
+        <td>Calories*</td>
+        <td><b>n/a</b> cal</td>
+      </tr>
+    </table>
+  </div>
+  <br>
+<% end %>
