--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -7,7 +7,7 @@
 <% @cardio_reports.ordered_by_recency.reverse.each do |cardio_report| %>
   <div class="card">
     <div class="card-header">
-      <%= cardio_report.datestamp.strftime('%Y-%m-%d') %>
+      <%= cardio_report.datestamp.strftime('%a, %b %d, %Y') %>
       <div style="float:right;">
         <%= link_to edit_cardio_report_path(cardio_report) do %>
           <%= octicon "pencil", :height => 16 %>
