--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -29,7 +29,7 @@
         <td>Distance</td>
         <td><b><%= '%.1f' % cardio_report.distance_miles %></b> miles</td>
         <td>Calories</td>
-        <td><b><%= cardio_report.calories.to_i %></b> cal</td>
+        <td><b><%= cardio_report.calories.to_i %></b> kcal</td>
       </tr>
     </table>
   </div>
