Remove icon seperator

--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -12,7 +12,7 @@
         <%= link_to edit_cardio_report_path(cardio_report) do %>
           <%= octicon "pencil", :height => 16 %>
         <% end %>
-        &nbsp;|&nbsp;
+        &nbsp;
         <%= link_to cardio_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
           <%= octicon "trashcan", :height => 16 %>
         <% end %>
