--- a/app/views/cardio_reports/index.html.erb
+++ b/app/views/cardio_reports/index.html.erb
@@ -32,8 +32,10 @@
         <td><b><%= cardio_report.calories.to_i %></b> kcal</td>
       </tr>
     </table>
-    <% if cardio_report.max_calories? %>
-      <footer class="card-footer text-muted"><i>Most calories burned</i></footer>
+    <% if cardio_report.ranking_by_calories <= 10 %>
+      <footer class="card-footer text-muted">
+        <i>#<%= cardio_report.ranking_by_calories %> most calories burned</i>
+      </footer>
     <% end %>
   </div>
   <br>
