Make minor UI changes

--- a/app/views/sleep_reports/index.html.erb
+++ b/app/views/sleep_reports/index.html.erb
@@ -31,7 +31,7 @@
           <%= link_to edit_sleep_report_path(sleep_report) do %>
             <%= octicon "pencil", :height => 16 %>
           <% end %>
-          &nbsp;|&nbsp;
+          &nbsp;&nbsp;
           <%= link_to sleep_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
             <%= octicon "trashcan", :height => 16 %>
           <% end %>
