--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -10,7 +10,7 @@
   <thead>
     <tr>
       <th>Date</th>
-      <th>Pounds</th>
+      <th>Weight</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,12 +19,12 @@
     <% @weight_reports.ordered_by_recency.reverse.each do |weight_report| %>
       <tr>
         <td><%= weight_report.datestamp.strftime('%Y-%m-%d') %></td>
-        <td><%= '%.1f' % weight_report.weight_pounds %></td>
+        <td><b><%= '%.1f' % weight_report.weight_pounds %></b> lb</td>
         <td nowrap>
           <%= link_to edit_weight_report_path(weight_report) do %>
             <%= octicon "pencil", :height => 16 %>
           <% end %>
-          &nbsp;|&nbsp;
+          &nbsp;&nbsp;
           <%= link_to weight_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
             <%= octicon "trashcan", :height => 16 %>
           <% end %>
