--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -4,7 +4,9 @@
 
 <br><br>
 
-<span class="glyphicon glyphicon-search"></span>
+<%= line_chart WeightReport.pluck(:datestamp, :weight_pounds),  ytitle: "Weight (lb)", min: 160, max: 190 %>
+
+<br>
 
 <table class="table">
   <thead>
