--- a/app/views/weight_reports/index.html.erb
+++ b/app/views/weight_reports/index.html.erb
@@ -4,34 +4,48 @@
 
 <br><br>
 
-<%= line_chart WeightReport.pluck(:datestamp, :weight_pounds),  min: 160, max: 190 %>
-
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" href="#table" data-toggle="tab">Table</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#charts" data-toggle="tab">Charts</a>
+  </li>
+</ul>
 <br>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Weight</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="tab-content">
+  <div id="table" class="tab-pane active show">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Weight</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @weight_reports.ordered_by_recency.reverse.each do |weight_report| %>
-      <tr>
-        <td><%= weight_report.datestamp.strftime('%Y-%m-%d') %></td>
-        <td><b><%= '%.1f' % weight_report.weight_pounds %></b> lb</td>
-        <td nowrap>
-          <%= link_to edit_weight_report_path(weight_report) do %>
-            <%= octicon "pencil", :height => 16 %>
-          <% end %>
-          &nbsp;&nbsp;
-          <%= link_to weight_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
-            <%= octicon "trashcan", :height => 16 %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @weight_reports.ordered_by_recency.reverse.each do |weight_report| %>
+          <tr>
+            <td><%= weight_report.datestamp.strftime('%Y-%m-%d') %></td>
+            <td><b><%= '%.1f' % weight_report.weight_pounds %></b> lb</td>
+            <td nowrap>
+              <%= link_to edit_weight_report_path(weight_report) do %>
+                <%= octicon "pencil", :height => 16 %>
+              <% end %>
+              &nbsp;&nbsp;
+              <%= link_to weight_report, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                <%= octicon "trashcan", :height => 16 %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+  <div id="charts" class="tab-pane">
+    <%= line_chart WeightReport.pluck(:datestamp, :weight_pounds),  min: 160, max: 190 %> 
+  </div>
+</div>
