Clear summary page

--- a/app/views/summary/index.html.erb
+++ b/app/views/summary/index.html.erb
@@ -1,4 +1,2 @@
-<h1>Summary Metrics</h1>
-<br>
-
-<h2>30-day average weight: <b><%= current_average_weight %></b> lb</h2>
+<h1><b><i>Self-Metrics</i></b></h1>
+<hr>
